--- a/build.gradle
+++ b/build.gradle
@@ -20,5 +20,5 @@ dependencies {
 }
 
 task listJars << {
-    configurations.compile.each { File file -> println file.name }
+    configurations.compile.each { File file -> println file.getAbsoluteFile() }
 }
