--- a/build.gradle
+++ b/build.gradle
@@ -7,18 +7,26 @@ repositories {
     mavenCentral()
 
     maven {
-        url 'https://repository.cloudera.com/artifactory/cloudera-repos/'
+        url 'http://conjars.org/repo/'
     }
 }
 
 dependencies {
     testCompile group: 'junit'          , name: 'junit'    , version: '4.11'
 
-    compile group: 'org.apache.hive'  , name: 'hive-exec'  , version: '0.9.0'
-    compile group: 'org.apache.hadoop', name: 'hadoop-core', version: '2.0.0-mr1-cdh4.1.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-common', version: '2.0.0-cdh4.1.2'
+    compile group: 'org.apache.hive'  , name: 'hive-exec'  , version: '1.0.0'
+    compile group: 'org.apache.hadoop', name: 'hadoop-common', version: '2.6.0'
+    compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-core', version: '2.6.0'
 }
 
 task listJars << {
     configurations.compile.each { File file -> println file.getAbsoluteFile() }
 }
+
+jar {
+    doFirst {
+        from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA' 
+}
+
